Fix cart image distortion

--- a/app/assets/stylesheets/api/carts.scss
+++ b/app/assets/stylesheets/api/carts.scss
@@ -61,8 +61,7 @@
 .cart-item-image{
   max-width: 100%;
   max-height: 100%;
-  width: auto;
-  height: auto;
+  object-fit: contain;
 }
 
 .title-col {
